[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "meds_etl_native"
dynamic = ["version"]
description = "Optimized algorithms for meds_etl implemented in C++."
readme = "README.md"
requires-python=">3.9"
license = {text = "Apache-2.0"}
